# pixforge

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: publish-crates.yml  release.yml
backends/metal-stablediffusion-ggml/: metadata.json
backends/stablediffusion-ggml/: metadata.json
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  output.rs
src/providers/: azure_mai.rs  azure_openai.rs  gemini.rs  mod.rs  openai_compat.rs
src/setup/: config_edit.rs  io.rs  mod.rs  traits.rs  wizard.rs
tests/: api_key_env_safety.rs  azure_mai_mock.rs  azure_openai_mock.rs  config_ux.rs  gemini_mock.rs  localai_integration.rs  openai_compat_mock.rs  setup_wizard.rs
