[package]
name = "pixforge"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.74"
description = "Fast CLI to generate images via OpenAI, Azure, Gemini, LocalAI, and other image-gen providers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/GitAashishG/pixforge"

[[bin]]
name = "pixforge"
path = "src/main.rs"

[lib]
name = "pixforge"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
hex = "0.4"
open = "5"
is-terminal = "0.4"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
httpmock = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
